src/main/java/org/example/hotel_service/errors/exception/ExceptionResponse.java
package org.example.hotel_service.errors.exception;

public record ExceptionResponse(
    String message
) {
}
